feat(comment): add author middleware
